Dark theme has been implemented

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">pizza-shevtsov-shift-2025</string>
+    <string name="app_name">ШИФТ Pizza</string>
 </resources>
